--- a/.env
+++ b/.env
@@ -4,4 +4,11 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
+POSTGRES_URL="postgres://default:ScYgzv7yG0Jx@ep-hidden-queen-a438jdmi-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:ScYgzv7yG0Jx@ep-hidden-queen-a438jdmi-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:ScYgzv7yG0Jx@ep-hidden-queen-a438jdmi-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:ScYgzv7yG0Jx@ep-hidden-queen-a438jdmi.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-hidden-queen-a438jdmi-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="ScYgzv7yG0Jx"
+POSTGRES_DATABASE="verceldb"
